<resources>
    <string name="app_name">Bitacora20</string>


    <!-- Layout Login -->
    <string name="titulo_login">Iniciar Sesión</string>
    <string name="texto_explicacion_login">Usa tu dirección de correo electrónico y la contraseña que indicaste al crear tu cuenta</string>
    <string name="prompt_correo_electronico">Correo electrónico</string>
    <string name="prompt_contrasenha">Contraseña</string>
    <string name="action_boton_iniciar_sesion">INICIAR SESION</string>
    <string name="link_contrasenha_olvidada">¿Ha olvidado su contraseña?</string>

    <!-- Layout Crear Cuenta -->
    <string name="crear_cuenta_titulo">Crear Cuenta</string>
    <string name="crear_cuenta_descripcion">Al crear una cuenta, podrás llevar anotaciones de todas tus clases.</string>
    <string name="crear_cuenta_hint_nombre">Nombre y Apellido</string>
    <string name="crear_cuenta_hint_nickname">Nickname</string>
    <string name="crear_cuenta_hint_telefono">Número de teléfono</string>
    <string name="crear_cuenta_hint_email">Correo electrónico</string>
    <string name="crear_cuenta_hint_password">Password</string>
    <string name="crear_cuenta_boton_registrate">Registrate</string>

    <!-- Layout Inicio -->
    <string name="button2">Iniciar Sesión</string>
    <string name="button">Registrarse</string>

    <!-- Layout Crear Materia -->
    <string name="crear_materia_titulo"> Creación de Materia </string>
    <string name="crear_materia_descripcion"> Asigna un nombre a la Materia y su descripción y profesor </string>
    <string name="crear_materia_hint_nombre"> Nombre </string>
    <string name="crear_materia_hint_descripcion"> Descripción </string>
    <string name="crear_materia_hint_profesor"> Profesor </string>
    <string name="crear_materia_boton_crearmateria"> Crear Materia </string>

    <!-- Layout Crear Tema -->
    <string name="crear_tema_titulo"> Creación de Tema </string>
    <string name="crear_tema_descripcion"> Asigna un nombre al Tema y su fecha. </string>
    <string name="crear_tema_hint_nombre"> Nombre </string>
    <string name="crear_tema_hint_fecha"> Fecha </string>
    <string name="crear_tema_boton_creartema"> Crear Tema </string>

    <!-- Menu -->
    <string name="menu_editar"> Editar </string>
    <string name="menu_eliminar"> Eliminar </string>
    <string name="menu_compartir"> Compartir </string>
    <string name="menu_guardar"> Guardar </string>
    <string name="menu_limpiar"> Limpiar </string>
    <string name="menu_siguiente"> Siguiente </string>
    <string name="menu_refresh"> Actualizado </string>

    <!-- Layout Ver Materias-->
    <string name="grupos_cercanos_titulo"> Materias </string>

    <!-- Layout Ver Datos Materia -->
    <string name="ver_datos_materia_titulo"> Datos de las Materias </string>
    <string name="ver_datos_materia_descripcion"> Muestra los datos de las materias </string>
    <string name="etiqueta_nombre_materia"> Nombre:  </string>
    <string name="etiqueta_descripcion_materia"> Descripción:  </string>
    <string name="etiqueta_profesor_materia"> Profesor:  </string>
    <string name="titulo_principal2"> Temas </string>

    <!-- Layout Ver Datos Tema -->
    <string name="ver_datos_tema_titulo"> Datos de las Temas </string>
    <string name="ver_datos_tema_descripcion"> Muestra los datos de los temas </string>
    <string name="etiqueta_nombre_tema"> Nombre:  </string>
    <string name="etiqueta_fecha_tema"> Fecha:  </string>

    <!-- Mensajes -->
    <string name="lista_vacia">Lista vacía</string>
</resources>