<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scrollView1"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_datos_materia_titulo"
            android:id="@+id/tit_creacion_grupo"
            android:layout_alignParentTop="true"
            android:layout_gravity="center"
            android:paddingTop="10dp"
            android:textSize="@dimen/tamanho_titulo"
            android:textColor="#3B75A3"
            android:textStyle="italic"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ver_datos_materia_descripcion"
            android:id="@+id/desc_actiividad_creacion_grupo"
            android:layout_marginTop="20dp"
            android:layout_below="@+id/tit_creacion_grupo"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:textSize="@dimen/desc_actividad"
            />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="30dp">

            <ImageView
                android:id="@+id/tipo_tarjeta_imagen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@android:drawable/star_big_on" />
            <TextView
                android:id="@+id/id_nombre_materia_etiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="20sp"
                android:text="@string/etiqueta_nombre_materia" />
            <TextView
                android:id="@+id/id_nombre_materia_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                 />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="10dp">

            <ImageView
                android:id="@+id/nombre_ape_contacto_imagen"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:src="@android:drawable/ic_menu_compass" />
            <TextView
                android:id="@+id/id_descripcion_materia_etiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="20sp"
                android:text="@string/etiqueta_descripcion_materia" />
            <TextView
                android:id="@+id/id_descripcion_materia_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                />
            <TextView
                android:id="@+id/id_profesor_materia_etiqueta"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:textSize="20sp"
                android:text="@string/etiqueta_profesor_materia" />
            <TextView
                android:id="@+id/id_profesor_materia_valor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom"
                android:layout_marginLeft="10dp"
                android:textSize="20sp"
                />
        </LinearLayout>
    </LinearLayout>
</ScrollView>
